--- a/task-3.html
+++ b/task-3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe Game</title>
+    <title>Tic Tac Toe Game by renuka </title>
     <link rel="stylesheet" href="style3.css">
     <link rel="shortcut icon" href="e:\New folder\Downloads\tic-tac-toe-hand-drawn-game.png" type="image/x-icon" />
     <script src="script3.js" defer></script>
